# polygeo

./: .gitattributes  .gitignore  LICENSE  README.md  cabal.project.freeze  flake.nix  polygeo.cabal
src/: PolyGeo.hs
