cabal-version:      3.16
build-type:         Simple

name:               polygeo
version:            0.1.0.0
category:           math
synopsis:           Summing products of multivariate polynomials and exponentials over tuples of naturals

license:            BSD-3-Clause
license-file:       LICENSE

extra-doc-files:    README.md

library

    build-depends:       base >= 4.22 && < 4.23
                 ,       hashable >= 1.5 && < 1.6
                 ,       unordered-containers >= 0.2 && < 0.3

    hs-source-dirs:      src

    default-language:    Haskell2010

    exposed-modules:     PolyGeo

    ghc-options:         -Wall